# weekly-food-shopping

./: .env.example  Final_Report.tex  README.md  agent.py  main.py  pyproject.toml
src/: agent.py
src/utils/: kroger_helper.py
tools/: kroger_products.py
utils/: kroger_helper.py
