[project]
name = "weekly-food-shopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-otel>=0.12.0",
    "arize-phoenix>=13.21.0",
    "arize-phoenix-client>=2.1.0",
    "arize-phoenix-evals>=2.12.0",
    "arize-phoenix-otel>=0.15.0",
    "boto3>=1.42.54",
    "litellm>=1.83.0",
    "openinference-instrumentation-bedrock>=0.1.33",
    "openinference-instrumentation-strands-agents>=0.1.2",
    "requests>=2.32.5",
    "strands-agents[ollama]>=1.27.0",
]
